--- a/server/py4web/apps/vidjil/templates/user/edit.html
+++ b/server/py4web/apps/vidjil/templates/user/edit.html
@@ -1,23 +1,23 @@
-{{extend 'db_layout.html'}}
+[[extend 'db_layout.html']]
 
-{{=message}}
+[[=message]]
 <form id="data_form" action="DB_ADDRESS/user/edit_form" enctype="multipart/form-data" method="post">
-    <input type="HIDDEN" id="user_id" name="id" value="{{=request.vars["id"]}}"> 
+    <input type="HIDDEN" id="user_id" name="id" value="[[=request.query["id"] ]]"> 
     <table>
         <tbody>
             <tr>
                 <td><label for="first_name" id="first_name__label">First name: </label></td>
-                <td><input class="string" id="first_name" name="first_name" type="text" value="{{=user.first_name}}"><span></span></td>
+                <td><input class="string" id="first_name" name="first_name" type="text" value="[[=user.first_name]]"><span></span></td>
                 <td></td>
             </tr>
             <tr>
                 <td><label for="last_name" id="last_name__label">Last name: </label></td>
-                <td><input class="string" id="last_name" name="last_name" type="text" value="{{=user.last_name}}"><span></span></td>
+                <td><input class="string" id="last_name" name="last_name" type="text" value="[[=user.last_name]]"><span></span></td>
                 <td></td>
             </tr>
             <tr>
                 <td><label for="email" id="email__label">Email: </label></td>
-                <td><input class="string" id="email" name="email" type="text" value="{{=user.email}}"><span></span></td>
+                <td><input class="string" id="email" name="email" type="text" value="[[=user.email]]"><span></span></td>
                 <td></td>
             </tr>
             <tr>
