py4web: update layout templates / remove old home page template

--- a/server/py4web/apps/vidjil/templates/component_loader.html
+++ b/server/py4web/apps/vidjil/templates/component_loader.html
@@ -1,4 +1,4 @@
-[[extend 'layout.html']]
+[[extend 'db_layout.html']]
 
 <ajax-component id="component_1" url="[[=URL('mycomponent.load')]]">
     <blink>Loading...</blink>
