--- a/server/py4web/apps/vidjil/templates/vuegrid_bulma.html
+++ b/server/py4web/apps/vidjil/templates/vuegrid_bulma.html
@@ -1,4 +1,4 @@
-[[extend 'layout_bulma.html']]
+[[extend 'db_layout_bulma.html']]
 
 [[block page_head]]
 <link rel="stylesheet" href="[[=URL('static/components-bulma/grid/grid.css')]]">
