--- a/server/py4web/apps/vidjil/templates/custom_form.html
+++ b/server/py4web/apps/vidjil/templates/custom_form.html
@@ -1,4 +1,4 @@
-[[extend 'layout.html']]
+[[extend 'db_layout.html']]
 
 <h2 class="title">Form Superhero Identity (Custom) </h2>
 [[= form.custom.begin ]]
