--- a/server/py4web/apps/vidjil/templates/default/help.html
+++ b/server/py4web/apps/vidjil/templates/default/help.html
@@ -1,7 +1,7 @@
-{{extend 'db_layout.html'}}
+[[extend 'db_layout.html']]
 
 <div>
-    <h2>{{=message}}</h2>
+    <h2>[[=message]]</h2>
     
     <div id="db_table_container">
     
