--- a/server/py4web/apps/vidjil/templates/flash_example.html
+++ b/server/py4web/apps/vidjil/templates/flash_example.html
@@ -1,4 +1,4 @@
-[[extend 'layout.html']]
+[[extend 'db_layout.html']]
 
 <button onclick="Q.flash({message: 'you clicked the button', class:'warning'})">Click me</button>
 <br/>or type something below<br/>
