--- a/server/py4web/apps/vidjil/templates/html_grid.html
+++ b/server/py4web/apps/vidjil/templates/html_grid.html
@@ -1,4 +1,4 @@
-[[extend 'layout.html']]
+[[extend 'db_layout.html']]
 
 <h2 class="title">[[=title]] </h2>
 <div class="container" style="padding-top: 1em;">
