--- a/server/py4web/apps/vidjil/templates/starrating.html
+++ b/server/py4web/apps/vidjil/templates/starrating.html
@@ -1,4 +1,4 @@
-[[extend 'layout.html']]
+[[extend 'db_layout.html']]
 
 [[block page_head]]
 <link rel="stylesheet" href="[[=URL('static/components/starrater/starrater.css')]]">
