py4web: fix default form/init_db templates

--- a/server/py4web/apps/vidjil/templates/default/init_db.html
+++ b/server/py4web/apps/vidjil/templates/default/init_db.html
@@ -1,6 +1,6 @@
-{{extend 'db_layout.html'}}
+[[extend 'db_layout.html']]
 
-{{=message}}
+[[=message]]
 <form id="data_form" action="DB_ADDRESS/default/init_db_form" enctype="multipart/form-data" method="post">
     <table>
         <tbody>
