--- a/server/py4web/apps/vidjil/templates/default/user.html
+++ b/server/py4web/apps/vidjil/templates/default/user.html
@@ -5,28 +5,12 @@
 <div>
 [[if db(db.auth_user.id > 0).count() == 0:]]
 
-<a class="button" onclick="db.call('default/init_db');">init database</a>
-<a class="button" onclick="db.call('default/init_from_csv');">load backup</a>
+<a class="button" onclick="db.call('vidjil/default/init_db');">init database</a>
+<a class="button" onclick="db.call('vidjil/default/init_from_csv');">load backup</a>
     
 [[else:]]
     
-    
-[[if 'form' in locals():]]
-    [[form['_id'] ="login_form"]]
-    [[=form]]
-[[pass]]
-    
-[[if request.args(0)=='login':]]
-    
-    [[if not 'register' in auth.settings.actions_disabled:]]
-        [[#<button class="btn" onclick="db.call('default/user/register')">Register</button>]]
-    [[pass]]
-
-<!--    
-    [[if not 'request_reset_password' in auth.settings.actions_disabled:]]
-        <button class="btn" onclick="db.call('default/user/request_reset_password')">Lost Password</button>
-    [[pass]]
- -->
+  
 
 <p>
 demo login: <i>demo@vidjil.org</i>
