--- a/server/py4web/apps/vidjil/templates/user/index.html
+++ b/server/py4web/apps/vidjil/templates/user/index.html
@@ -44,5 +44,5 @@
         <table class="db_table" id="db_fixed_header"></table>
     </div>
 
-<span id="create_user_button" class="button2" onclick="db.call('default/user/register');">+ new user</span>
+<span id="create_user_button" class="button2" onclick="db.call('auth/register');">+ new user</span>
 
