Warnins; Add a view to show and interact with warnings

--- a/browser/css/segmenter_page.css
+++ b/browser/css/segmenter_page.css
@@ -2748,6 +2748,9 @@ div.tooltip {
 .dropdown-check-list.visible .rs-items {
   display: block;
 }
+.warnings_section_unpresent {
+  color: #93a1a1;
+}
 body {
   line-height: 20px;
 }
