--- a/browser/css/vidjil.less
+++ b/browser/css/vidjil.less
@@ -2800,3 +2800,7 @@ div.tooltip {
 .dropdown-check-list.visible .rs-items {
   display: block;
 }
+
+.warnings_section_unpresent {
+  color: @secondary
+}
