--- a/browser/css/dark.css
+++ b/browser/css/dark.css
@@ -2748,3 +2748,6 @@ div.tooltip {
 .dropdown-check-list.visible .rs-items {
   display: block;
 }
+.warnings_section_unpresent {
+  color: #586e75;
+}
