--- a/browser/css/segmenter_page.css
+++ b/browser/css/segmenter_page.css
@@ -2751,6 +2751,10 @@ div.tooltip {
 .warnings_section_unpresent {
   color: #93a1a1;
 }
+.warnings_line {
+  display: flex;
+  margin: 4px;
+}
 body {
   line-height: 20px;
 }
