--- a/browser/css/vidjil.less
+++ b/browser/css/vidjil.less
@@ -2790,6 +2790,7 @@ div.tooltip {
 .dropdown-check-list ul.rs-items li {
   list-style: none;
   display: flex;
+  cursor: pointer;
 }
 
 .dropdown-check-list.visible .rs-anchor {
