--- a/browser/css/light.css
+++ b/browser/css/light.css
@@ -2740,6 +2740,7 @@ div.tooltip {
 .dropdown-check-list ul.rs-items li {
   list-style: none;
   display: flex;
+  cursor: pointer;
 }
 .dropdown-check-list.visible .rs-anchor {
   color: #0094ff;
