--- a/browser/css/dark.css
+++ b/browser/css/dark.css
@@ -1164,6 +1164,12 @@ a.tag-link {
   background: #000000;
   display: none;
 }
+.modal.data-container {
+  z-index: 4;
+}
+.modal.info-container {
+  z-index: 3;
+}
 .modal.data-container,
 .modal.info-container {
   top: 50px;
