--- a/browser/css/talk.css
+++ b/browser/css/talk.css
@@ -2748,12 +2748,18 @@ div.tooltip {
 .dropdown-check-list.visible .rs-items {
   display: block;
 }
+.warning_span {
+  min-width: 100px;
+  display: inline-block;
+  text-align: right;
+  cursor: pointer;
+}
+.warning_span:hover {
+  color: #002b36;
+  font-style: oblique;
+}
 .warnings_section_unpresent {
   color: #93a1a1;
-}
-.warnings_line {
-  display: flex;
-  margin: 4px;
 }
 #mid-container {
   font-size: 125%;
