--- a/browser/css/vidjil.less
+++ b/browser/css/vidjil.less
@@ -2802,6 +2802,18 @@ div.tooltip {
   display: block;
 }
 
+.warning_span {
+  min-width:120px; 
+  display: inline-block; 
+  text-align: right; 
+  cursor: pointer;
+}
+
+.warning_span:hover {
+  color: @select;
+  font-style: oblique;
+  font-weight: bold;
+}
 .warnings_section_unpresent {
   color: @secondary
 }
