Vidjil, remove functionnal server tests Suppress and convert watir test to cypress Add new cypress functions REmove jobs in gitlab-ci Add id to use in server part

--- a/server/web2py/applications/vidjil/views/my_account/jobs.html
+++ b/server/web2py/applications/vidjil/views/my_account/jobs.html
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div id="db_table_container" class="db_block">
-        <table class="db_table" id="table">
+        <table class="db_table" id="table_process">
             <thead>
             <tr>
                 <td class="column_50"></td>
