server view; change dom id of one element to be more accurate

--- a/server/web2py/applications/vidjil/views/file/form.html
+++ b/server/web2py/applications/vidjil/views/file/form.html
@@ -90,7 +90,7 @@
        Click on 
          <span class="button2"
           onclick="add_file('fieldset_container', this.dataset.index++, {{=group_ids}})"
-          id="file_button"
+          id="add_sample_line"
           data-index="{{=len(files)}}">add other sample</span>
        to add at once more than one sample.
     </div>
