Py4web; apply mulitple changes to backend server code.

--- a/server/py4web/apps/vidjil/templates/auth/login.html
+++ b/server/py4web/apps/vidjil/templates/auth/login.html
@@ -31,7 +31,7 @@
                     <td>
                     </td>
                     <td >
-                        <input type="submit" value="login" class="btn">
+                        <input type="submit" value="login" class="btn" id="submit_login">
                     </td>
                     <td>
                     </td>
