--- a/server/py4web/apps/vidjil/templates/results_file/confirm.html
+++ b/server/py4web/apps/vidjil/templates/results_file/confirm.html
@@ -1,21 +1,21 @@
-{{extend 'db_layout.html'}}
+[[extend 'db_layout.html']]
 
-{{('message' in globals())}}
-{{if 'message' in globals():}}
+[[('message' in globals())]]
+[[if 'message' in globals():]]
 
 <div>
-    <h3>{{=message}}</h3>
+    <h3>[[=message]]</h3>
     
     Are you sure you want to delete the results of this processing?</br>
 
     <div class="center"> 
-        <button id="delete_button" onclick="db.call('results_file/delete', {'results_file_id' :'{{=request.vars["results_file_id"]}}', 'sample_set_id': '{{=request.vars["sample_set_id"]}}'} )">delete</button>
+        <button id="delete_button" onclick="db.call('results_file/delete', {'results_file_id' :'[[=request.query["results_file_id"]]]', 'sample_set_id': '[[=request.query["sample_set_id"]]]'} )">delete</button>
         <button id="cancel_button" onclick="db.back();">cancel</button>
     </div>
 </div>
     
-{{elif 'content' in globals():}}
-{{=content}}
-{{else:}}
-{{=BEAUTIFY(response._vars)}}
-{{pass}}
+[[elif 'content' in globals():]]
+[[=content]]
+[[else:]]
+[[=BEAUTIFY(response._vars)]]
+[[pass]]
