--- a/server/py4web/apps/vidjil/templates/results_file/output.html
+++ b/server/py4web/apps/vidjil/templates/results_file/output.html
@@ -1,6 +1,6 @@
-{{extend 'db_layout.html'}}
+[[extend 'db_layout.html']]
 
-<h3>Output files for process #{{=results_file_id}}</h3>
+<h3>Output files for process #[[=results_file_id]]</h3>
 
 <div class="db_block">
 </div>
@@ -13,12 +13,12 @@
                 <td class="column_50">size</td>
             </tr>
         </thead>
-       {{for file in files :}}
+       [[for file in files :]]
            <tr>
-               <td><a href={{=URL('results_file', 'download', scheme='https', vars=dict(results_file_id=results_file_id, filename=file['filename']))}}> {{=file['filename']}} </a></td>
-               <td>{{=file['size']}}</td>
+               <td><a href=[[=URL('results_file', 'download', scheme='https', vars=dict(results_file_id=results_file_id, filename=file['filename']))]]> [[=file['filename']]] </a></td>
+               <td>[[=file['size']]]</td>
             </tr>
-        {{pass}}
+        [[pass]]
     </table>
     <table class="db_table" id="db_fixed_header"></table>
 </div>
