--- a/server/py4web/apps/vidjil/templates/user/index.html
+++ b/server/py4web/apps/vidjil/templates/user/index.html
@@ -24,7 +24,7 @@
             </thead>
             
            [[for row in query :]]
-               <tr class="pointer" onclick="db.call('user/info', {'id' :'[[=row.id]]'} )">
+               <tr class="pointer" ondblclick="db.call('user/info', {'id' :'[[=row.id]]'} )">
                     <td> [[=row.id]]</td>
                     <td> [[=row.first_name]] [[=row.last_name]]</td>
                     <td> [[=row.email]]  </td>
