--- a/server/py4web/apps/vidjil/templates/my_account/index.html
+++ b/server/py4web/apps/vidjil/templates/my_account/index.html
@@ -39,13 +39,13 @@
                 </div>
                 [[ if result[role]['fuses']: ]]
                 <div class="set_data">
-                    <div>results:</div>
+                    <div>results:</div> 
                     [[ for fuse in result[role]['fuses']: ]]
                         <div class="analysis_button">
                             <span class="button button_token [[=fuse[3] ]]_token">
                                 [[ if fuse[3] == 'patient': ]]
                                     [[ split_name = fuse[4].split(' ') ]]
-                                    [[ name = vidjil_utils.display_names(fuse[1], split_name[0], split_name[1]) ]]
+                                    [[ name = display_names(fuse[1], split_name[0], split_name[1]) ]]
                                 [[else:]]
                                     [[ name = fuse[4] ]]
                                 [[ pass ]]
