--- a/server/py4web/apps/vidjil/templates/db_layout.html
+++ b/server/py4web/apps/vidjil/templates/db_layout.html
@@ -9,7 +9,7 @@
         <a id="db_page_news" class="button" onclick="db.call('notification/index');">news</a>
         <a class="button" onclick="db.call('log/index');">log</a>
 
-        [[if globals().get('user') and auth.is_admin(globals().get('user')["id"]):]]
+        [[if globals().get('user') and auth.is_admin:]]
         - - -
         <a id="db_page_preprocess" class="button" onclick="db.call('pre_process/index');">pre-process configs</a>
         <a id="db_page_configs" class="button" onclick="db.call('config/index');">process configs</a>
