py4web; admin template; use 'format' values adn not the request (possibly missing) entrie of format

--- a/server/py4web/apps/vidjil/templates/admin/showlog.html
+++ b/server/py4web/apps/vidjil/templates/admin/showlog.html
@@ -15,7 +15,7 @@
     <div class="db_block_left">
         search
         <input id="db_filter_input" type="text" value="[[=request.query["filter"] ]]" 
-               onchange="db.call('admin/showlog', {'file' : '[[=request.query["file"] ]]', 'filter' : this.value, 'format': '[[=request.query["format"] ]]' } )"  >
+               onchange="db.call('admin/showlog', {'file' : '[[=request.query["file"] ]]', 'filter' : this.value, 'format': '[[=format]]' } )"  >
     </div>
 </div>
 
